fixed text not showing

--- a/frontend/src/app/components/pages/food-page/food-page.component.css
+++ b/frontend/src/app/components/pages/food-page/food-page.component.css
@@ -107,6 +107,7 @@ a:focus{
   padding: 0.6rem 2rem 0.6rem 0;
   border-radius: 10rem;
   font-size: 1.3rem;
+  color:whitesmoke;
 }
 
 .price{
